<resources>
    <string name="app_name">Score Counter</string>
    <string name="remove_one_point" translatable="false">remove one point</string>
    <string name="add_one_point" translatable="false">add one point</string>
    <string name="enter_name">Enter Name</string>
    <string name="generate_a_color">Generate color</string>
    <string name="delete_all_user">Delete all users</string>
    <string name="name_of_guest" translatable="false">Name of guest</string>
    <string name="compact_list">Compact List</string>
    <string name="score_counters">Score counters</string>
    <string name="by_default">By default</string>


    <!--  text view   -->
    <string name="delete_counter">Delete this counter</string>
    <string name="alert_add_participant">Add more participant before launch a counter</string>
    <string name="info_all_participant_deleted">All participants deleted</string>
    <string name="delete_all_participant_alert">Delete all counters</string>
    <string name="reset_all_score">Reset all score</string>
    <string name="about_to_me">About to me</string>
    <string name="setting_dice">Setting dice</string>
    <string name="setting_counter">Counters settings</string>
    <string name="back_button">back</string>
    <string name="enter_score" translatable="false">Score</string>
    <string name="round_remaining">Round remaining</string>
    <string name="dice_history">Dice history</string>
    <string name="game_history">Game history</string>
    <string name="counter_history">Counter history</string>
    <string name="alert_game">You need 3 participants for launch a tournament</string>
    <string name="cancel_tournament">Stop the current tournament</string>
    <string name="number_of_sides">Number of sides </string>
    <string name="number_of_dices">Number of dices</string>
    <string name="roll">Roll</string>


    <!--  message   -->
    <string name="help_start">Start a tournament where each player will face the other players once.</string>
    <string name="help_round">The list of duels.\nA long press on the player to validate a victory</string>
    <string name="help_ranking">The list of the current ranking in the order of accumulated points.</string>
    <string name="dice_config_explanation">You can customize the dice to change the number of sides and roll multiple dice at the same time.</string>
    <string name="message_step_input" translatable="false">You can custom the number of point attributed by click.\nA long click on step number for selected an other step</string>


    <!--  one word   -->
    <string name="ok" translatable="false">OK</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="menu">menu</string>
    <string name="solo_counter">Solo counter</string>
    <string name="duo_counter">Duo counter</string>
    <string name="list_counter">List counter</string>
    <string name="step">step</string>
    <string name="start">Start</string>
    <string name="contact" translatable="false">Contact</string>
    <string name="dice">Dice</string>
    <string name="return_text">return</string>
    <string name="edit">Edit</string>
    <string name="ranking">Ranking</string>
    <string name="rounds">Rounds</string>
    <string name="help">help</string>
    <string name="cancel">Cancel</string>
    <string name="total" translatable="false">Total :</string>
    <string name="customize">Customize</string>
    <string name="finish">Finish</string>
    <string name="close">Close</string>
    <string name="participants" translatable="false">Participants</string>


    <!--  description   -->
    <string name="image_crown" translatable="false">image crown</string>
    <string name="add_new_participant">Add new participant</string>
    <string name="image_dice" translatable="false">image dice</string>


    <!--  numbers   -->
    <string name="number_0" translatable="false">0</string>
    <string name="number_1" translatable="false">1</string>
    <string name="number_5" translatable="false">5</string>
    <string name="number_10" translatable="false">10</string>
    <string name="number_25" translatable="false">25</string>
    <string name="selected">Selected</string>
    <string name="image_edit_step" translatable="false">image edit step</string>
    <string name="step_1" translatable="false">Step 1</string>
    <string name="step_4" translatable="false">Step 4</string>
    <string name="step_3" translatable="false">Step 3</string>
    <string name="step_2" translatable="false">Step 2</string>
    <string name="style_large" translatable="false">style large</string>
    <string name="display_style">Display style</string>
    <string name="not_yet_implemented">Not yet implemented</string>
</resources>