<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="2dp"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/step_1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:padding="2dp"
        android:gravity="center"
        android:layout_weight="1"
        android:text="@string/number_1"
        android:textSize="9pt"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/step_5"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/step_5"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:padding="2dp"
        android:gravity="center"
        android:layout_weight="1"
        android:text="@string/number_5"
        android:textSize="9pt"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/step_setup"
        app:layout_constraintStart_toEndOf="@id/step_1"/>

    <TextView
        android:id="@+id/step_10"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:padding="2dp"
        android:gravity="center"
        android:layout_weight="1"
        android:text="@string/number_10"
        android:textSize="9pt"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/step_25"
        app:layout_constraintStart_toEndOf="@id/step_setup"/>

    <TextView
        android:id="@+id/step_25"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:padding="2dp"
        android:gravity="center"
        android:layout_weight="1"
        android:text="@string/number_25"
        android:textSize="9pt"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/step_10"/>

    <TextView
        android:id="@+id/step_setup"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:padding="2dp"
        android:gravity="center"
        android:layout_weight="1"
        android:text="@string/step"
        android:maxLines="1"
        android:autoSizeTextType="uniform"
        android:textSize="9pt"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/step_5"
        app:layout_constraintEnd_toStartOf="@id/step_10"/>

</androidx.constraintlayout.widget.ConstraintLayout>