<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    android:elevation="0dp"
    app:cardCornerRadius="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="2dp">

        <ImageView
            android:id="@+id/item_image_view_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:contentDescription="@string/menu"
            app:tint="@color/black"
            android:src="@drawable/_edit_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/layout_name"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <LinearLayout
            android:id="@+id/layout_name"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/item_image_view_clear"
            app:layout_constraintStart_toEndOf="@id/item_image_view_edit"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/item_text_view_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_of_guest"
                android:textColor="@color/black"
                android:textSize="11pt"
                android:ellipsize="end" />
        </LinearLayout>

        <ImageView
            android:id="@+id/item_image_view_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            app:tint="@color/black"
            android:contentDescription="@string/delete_all_participant_alert"
            android:src="@drawable/_clear_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/layout_name"
            app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>