<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.navigation.GameFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/game_card_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:strokeWidth="1dp"
        android:elevation="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/game_card_rounds">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/game_help_start"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginEnd="5dp"
                android:padding="8dp"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"
                android:src="@drawable/v_help_outline_24"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/game_btn_start"
                android:contentDescription="@string/help" />

            <Button
                android:id="@+id/game_btn_start"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5pt"
                android:paddingVertical="10dp"
                android:text="@string/start"
                android:textSize="7pt"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/game_help_start"
                app:layout_constraintEnd_toStartOf="@id/game_delete"/>

            <ImageView
                android:id="@+id/game_delete"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginEnd="5dp"
                android:padding="8dp"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"
                android:src="@drawable/v_delete_forever_24"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/game_btn_start"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/help" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/game_card_rounds"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        app:strokeWidth="1dp"
        android:elevation="0dp"
        app:layout_constraintTop_toBottomOf="@id/game_card_start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/game_card_result">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_help_round"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:elevation="1dp"
                android:layout_marginEnd="5dp"
                android:padding="5dp"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"
                android:src="@drawable/v_help_outline_24"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/game_text_title"
                app:layout_constraintStart_toStartOf="parent"
                android:contentDescription="@string/help" />

            <TextView
                android:id="@+id/tv_round_remaining"
                android:layout_width="60dp"
                android:layout_height="0dp"
                android:layout_marginEnd="10dp"
                android:elevation="1dp"
                android:text="@string/number_0"
                android:gravity="center"
                android:textSize="10pt"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/game_text_title" />

            <TextView
                android:id="@+id/game_text_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:background="@color/opacity_25"
                android:text="@string/rounds"
                android:gravity="center"
                android:textSize="10pt"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/recycler_view_round"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_round"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="2dp"
                app:layout_constraintTop_toBottomOf="@id/game_text_title"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:listitem="@layout/item_list_round"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/game_card_result"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        app:strokeWidth="1dp"
        android:elevation="0dp"
        app:layout_constraintTop_toBottomOf="@id/game_card_rounds"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/game_card_dice">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_help_ranking"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:elevation="1dp"
                android:layout_marginEnd="5dp"
                android:padding="5dp"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"
                android:src="@drawable/v_help_outline_24"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/game_tv_ranking"
                app:layout_constraintStart_toStartOf="parent"
                android:contentDescription="@string/help" />

            <TextView
                android:id="@+id/game_tv_ranking"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:background="@color/opacity_25"
                android:text="@string/participants"
                android:gravity="center"
                android:textSize="10pt"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/recycler_view_ranking"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_ranking"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="2dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/game_tv_ranking"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:listitem="@layout/item_list_ranking"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/game_card_dice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:strokeWidth="1dp"
        android:elevation="0dp"
        app:layout_constraintTop_toBottomOf="@id/game_card_result"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/game_text_dice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:gravity="center_horizontal"
                android:background="@color/opacity_25"
                android:textSize="10pt"
                android:text="@string/dice"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>


            <ImageView
                android:id="@+id/game_edit_dice_img"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:src="@drawable/v_edit_24"
                app:layout_constraintBottom_toTopOf="@id/game_edit_dice_txt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/img_dice"
                app:layout_constraintTop_toBottomOf="@+id/game_text_dice"
                android:contentDescription="@string/edit" />

            <TextView
                android:id="@+id/game_edit_dice_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/customize"
                android:textSize="5pt"
                app:layout_constraintTop_toBottomOf="@id/game_edit_dice_img"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/img_dice" />


            <ImageView
                android:id="@+id/img_dice"
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:contentDescription="@string/image_dice"
                android:src="@drawable/dice"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/game_edit_dice_txt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/game_text_dice" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>